*** empty log message ***

--- a/help/general/grouping_pane.html
+++ b/help/general/grouping_pane.html
@@ -15,7 +15,7 @@
     <h2>Default</h2>
     The default tree allows grouping by field information. This grouping is used the most as it allows you to group
     on year, category or any other field that is available in the module you are working in. You can group on multiple
-    fields, creating a leveled structure. In the example below the software items are grouped on container, category and
+    fields, creating a levelled structure. In the example below the software items are grouped on container, category and
     year. How you can group on fields is explained in the next paragraph.
 
     <br><br><img src="./images/view_groupingpane.jpg" alt="" border="0">
@@ -41,7 +41,7 @@
     <h2>Containers</h2>
 	The containers tree is only shown in the Container module. It offers the same options as the default tree. 
     Containers can have a hierarchy. This is established by setting a parent container. This way you can set up a structure
-    where you have numbered book cases, and assign this book case as a parent to the book shelfs. Just an example, you can set up
+    where you have numbered book cases, and assign this book case as a parent to the book shelves. Just an example, you can set up
     any structure you like! <br><br>
     As you might have noticed the container tree has a view menu. The following options are available:
 
@@ -65,7 +65,7 @@
     </table>
     
     <h2>File Structure</h2>
-    Shows the file structure of all items. This is representation of the directory structure and is only available for
+    This tree represents the file structure of the items. This is representation of the directory structure and is only available for
     modules where the items can have a file assigned to them (such as a movie which can point to an avi file). 
     Items not having a file linked will be excluded from this structure as well.<br>
     The icon on the file indicates whether the file exists. In the example below you can see that file "fieldsettings.png" can be found and the file "fieldsettings_small.png" 
