--- a/help/general/screen_layout.html
+++ b/help/general/screen_layout.html
@@ -26,7 +26,7 @@
     any of the sub modules.<br>
     
 	<h2>Grouping pane</h2>
-	Allows for grouping the items. <a href="grouping_pane.html">more about this.</a>
+	Allows for grouping the items. <a href="grouping_pane.html">More about this.</a>
 
 	<h2>Item tab</h2>
     Existing items are displayed in this pane. The displayed items can be opened, updated or deleted.
@@ -40,6 +40,6 @@
 	<br><br><img src="./images/view_newitemtab.jpg" alt="" border="0">
 
 	<h2>Charts</h2>
-	Create a simple chart. <a href="../charts/charts.html">more about this.</a>
+	Create a simple chart. <a href="../charts/charts.html">More about this.</a>
   </body>
 </html>
