--- a/help/items/sort.html
+++ b/help/items/sort.html
@@ -25,7 +25,7 @@
     <br><br><img src="./images/sort_filter.png" alt="" border="0"><br><br>
     
     <h2>Sort order</h2>
-    Here you can change the sort order (reverse the order by Descending the sorted items):
+    Here you can change the sort order (reverse the order by descending the sorted items):
     <table>
         <tr><td>-</td>
         <td>Ascending</td></tr>
