--- a/help/items/templates.html
+++ b/help/items/templates.html
@@ -26,20 +26,20 @@
     default templates.
 
     <h2>Using non-default templates</h2>
-    A default template is always used, but what if you want to use a non-default template ? After a template has been
+    A default template is always used, but what if you want to use a non-default template? After a template has been
     defined the <a href="../general/menubar.html">menu bar</a> is updated and the template is made available. 
     
     <br><br><img src="./images/templates_use.png" alt="" border="0"><br><br>
     
     Go to the "file" menu and find a "new item" sub-menu. This
-    sub-menu contains all defined templates. Select one of the template to create a new item using this template.
+    sub-menu contains all defined templates. Select one of the templates to create a new item using this template.
 
     <h1>Deleting a template</h1>
     Select a template in the list, perform a right-click, select "delete" from the menu.
 
     <h1>Updating a template</h1>
-    Double-click an item in the list to open it. Modify the values, the default setting or the the template name (or all) and
-    press "save"
+    Double-click an item in the list to open it. Modify the values, the default setting or the template name and
+    press "Save".
 
   </body>
 </html>
