--- a/help/items/views.html
+++ b/help/items/views.html
@@ -20,7 +20,7 @@
     This toolbar holds shortcuts to actions which are performed often.
     
     <h2>New item tab</h2>
-    You might see that there are two tabs, the first tab holds the existing items. The second tab is the New Item tab.
+    You might see that there are two tabs. The first tab holds the existing items. The second tab is the New Item tab.
 	Unsaved, new items are added to this section. New items can be imported from the internet or extracted 
     from files or CD drives. Additionally you can quickly add new items from here yourself. The latter is more
     useful from the <a href="../items/views_tableview.html">Table View</a> since this view allows you to edit
@@ -59,7 +59,7 @@
         <td><a href="../items/itemform.html">Open &lt;name&gt; Item</a>. 
         The Open &lt;name&gt; Item menu option (the &lt;name&gt; will mention the item name, such as Movie in the Movie module) 
         opens the currently selected item (in the overview) in the <a href="../items/itemform.html">item form</a>. 
-        The item information cannot be changed using the option, it will open the item readonly.        
+        The item information cannot be changed using this option, it will open the item read-only.        
         </td></tr>
         <tr><td><img src="../general/images/tb_open.png" alt="" border="0"></td>
         <td><a href="../items/itemform.html">Edit &lt;name&gt; Item</a>.
@@ -89,12 +89,12 @@
         </td></tr>   
         <tr><td><img src="../general/images/tb_report.png" alt="" border="0"></td>
         <td><a href="../reports/reporting.html">Create Report</a>.
-        Create HTML or PDF report for the selected items. If this menu option is not available it means that no XSLT files (report templates) have been defined for yoru module. 
-        There is a manual on how to do this, which can be found on the Data Crow website.
+        Create HTML or PDF report for the selected items. If this menu option is not available it means that no XSLT files (report templates) have been defined for 
+        your module. There is a manual on how to do this, which can be found on the Data Crow website.
         </td></tr>
         <tr><td><img src="../general/images/tb_sort.png" alt="" border="0"></td>
         <td><a href="../items/sort.html">Sort</a>.
-        Sort / order the items. The sort order is stored;after restarting Data Crow the sort order will remain the same.
+        Sort / order the items. The sort order is stored; after restarting Data Crow the sort order will remain the same.
         You can order the items in the view either ascending or descending and you can indicate multiple fields to sort on.
         </td></tr>
         <tr><td><img src="../general/images/tb_loan.png" alt="" border="0"></td>
