--- a/help/items/views_tableview.html
+++ b/help/items/views_tableview.html
@@ -20,8 +20,8 @@
     <h2>Editing values</h2>
     Editing a value in the table is straightforward. Click on the cell and you can either enter text 
     (for text fields), enter a number (for numeric fields) or select a value from the list. With text fields
-    you can also switch to the edit mode by pressing F2. Once satrisfied make sure to save the items you have edited 
-    by pressing <img src="../general/images/tb_saveall.png" alt="" border="0"> (save all) or <img src="../general/images/tb_save.png" alt="" border="0">.
+    you can also switch to the edit mode by pressing F2. Once satisfied make sure to save the items you have edited 
+    by pressing <img src="../general/images/tb_saveall.png" alt="" border="0"> (save all) or <img src="../general/images/tb_save.png" alt="" border="0">
     (save the selected item only) on the <a href="../general/toolbar.html">toolbar</a>.
     
     <br><br><br>The rest is explained <a href="../items/views.html">here</a>.
