--- a/help/loan/loan.html
+++ b/help/loan/loan.html
@@ -17,19 +17,20 @@
   
     <br><br>
     
-    If an item has been lend and is overdue (the contact person did not return the item before the due date) 
-    a warning message is displayed on startup.
+    If an item has been lent and is overdue (the contact person did not return the item before the due date) 
+    a warning message is displayed on start up.
 
 	<h2>Persons</h2>
 	For the loan administration to work, you need to register contacts in the <b>contacts</b> module. 
 	The registration of contacts works just the same as the registration of items in the other modules
 
 	<h2>Lending an item</h2>
-    Specify the person to which the item will be lend and specify the date on which the loan starts. 
+    Specify the person to whom the item will be lend and specify the date on which the loan starts. 
     If the loan start date is today (or in the past) the item will be marked as unavailable.<br><br>  
     You can enter a due date to indicate when the person should return the item. If the person returns the item after this date
     the item will be considered to be overdue.<br><br>  
-    The item cannot be lend to anyone else until the item has been returned. Note that there are 3 fields available 
+    
+    The item cannot be lent to anyone else until the item has been returned. Note that there are 3 fields available 
     which tell you more about the loan status, "Available", "Loaned By" and "Days Loaned". 
     These can be added by through the <a href="../settings/fields.html" target="main">General Field Settings</a>.
 
