--- a/help/modules/altermodulewizard.html
+++ b/help/modules/altermodulewizard.html
@@ -25,7 +25,10 @@
     See the <a href="definingfields.html">"Defining Fields"</a>.
 
     <h1>Finishing the Wizard</h1>
-    After all information has been supplied press the "finish" button or the "finish & new" button. The "finish" button finishes the module alteration process. Data Crow needs to restart before the changes can become apparent. The "finish & new" button finishes the module alteration process and restarts the wizard (which can be useful when you want to alter more then one module). 
+    After all information has been supplied press the "finish" button or the "finish & new" button. The "finish" button 
+    finishes the module alteration process. Data Crow needs to restart before the changes can become apparent. The "finish & new" 
+    button finishes the module alteration process and restarts the wizard (which can be useful when you want to alter more than 
+    one module). 
     
   </body>
 </html>
