--- a/help/modules/createmodulewizard.html
+++ b/help/modules/createmodulewizard.html
@@ -8,7 +8,7 @@
     <i>Menu path: Modules &gt; Create Module Wizard</i><br><br>
 
 	In the main screen of Data Crow you'll find a menu called "modules". This menu contains wizards to customize, create and relate modules. 
-	In this chapter we will dive into the creation of you very own module. 
+	In this chapter we will dive into the creation of your very own module. 
 	
 	<br><br><img src="./images/module_create.png">
 	
@@ -65,7 +65,7 @@
     		<td><b>Items represent actual files.</b> If enabled file fields are added to the items of this module thus making it possible for your items
     		to represent files in your system.</td></tr>
     	<tr><td>-</td>
-    		<td><b>Items can be lend to other persons.</b> You can also indicate if items belonging to the module can be lend to other persons (not available for property modules). Enabling this will
+    		<td><b>Items can be lent to other persons.</b> You can also indicate if items belonging to the module can be lent to other persons (not available for property modules). Enabling this will
             activate the loan functionality. You can change this information at a later stage (Alter Module Wizard).</td></tr>
 	</table>
 
@@ -73,7 +73,9 @@
     See the <a href="definingfields.html">"Defining Fields"</a>.
     
     <h1>Finishing the Wizard</h1>
-    After all information has been supplied press the "finish" button or the "finish & new" button. The "finish" button finishes the module creation process. Data Crow needs to restart before you can use the new module. The "finish & new" button finishes the module creation process and restarts the wizard (which can be useful when you want to create more then one module).
+    After all information has been supplied press the "finish" button or the "finish & new" button. The "finish" button finishes the module creation process. 
+    Data Crow needs to restart before you can use the new module. The "finish & new" button finishes the module creation process and 
+    restarts the wizard (which can be useful when you want to create more than one module).
 
   </body>
 </html>
