--- a/help/modules/definingfields.html
+++ b/help/modules/definingfields.html
@@ -6,7 +6,7 @@
     
 	<h1>Defining fields</h1>
 	
-    An important part of defining a module is defining the fields belonging to it. In the screen you see two tables, one with the predifined fields
+    An important part of defining a module is defining the fields belonging to it. In the screen you see two tables, one with the predefined fields
    (from the selected module type) and one with the newly defined fields. The predefined fields cannot be changed or removed. 
    You can however create, alter and remove fields from the New Field section (lower part of the screen). 
 	
@@ -53,16 +53,16 @@
 	The maximum input length for this field (in characters).
 	
 	<h3>Field type</h3>
-	The field type. There is a wide range of field types available and most of them speak for themselves. However the single reference and
-	multiple reference field need some more explanation. When you select either of these field types you will notice the reference module
+	There is a wide range of field types available and most of them speak for themselves. However the single reference and
+	multiple reference fields need some more explanation. When you select either of these field types you will notice the reference module
 	list becoming active. With these field types you can create a reference to another module. If you select a single reference field 
 	Data Crow will create a list of items from the selected module (such as is the case with categories for software). Only one 
-	of these items can be selected. If you select a multiple reference field the field can hold more then one property items 
-	(such as with the genres for audio cds). A field with an item select dialog is created.
+	of these items can be selected. If you select a multiple reference field the field can hold more than one property items 
+	(such as with the genres for audio CDs). A field with an item select dialog is created.
 	
 	<br><br>
 	
-	Another note on reference fields. When you make a reference to a property module the items of this module can be managed from the "tools" menu.
+	Another note on reference fields; when you make a reference to a property module the items of this module can be managed from the "tools" menu.
 	A reference to any other type of module will make of the referenced module a sub-module of the current module. Such is the case for example with actors for the movie module. The 
 	actor module is referenced by the movie module, making the actor module a sub-module of the movie module. The sub-module is displayed in the 
 	module bar when you select the referencing module.
