--- a/help/modules/deletemodulewizard.html
+++ b/help/modules/deletemodulewizard.html
@@ -22,9 +22,8 @@
 	<h2>Confirming the delete</h2>
     The second step shows you information on what is going to happen when you delete this module.
     Other modules might depend on this modules existence. A good example would be a property module, Y, 
-    which has been used by another module, X. Module X has a dropdown list of items belonging to 
-    module Y. When module Y is deleted, the reference between module X and module Y is also removed. 
-    Resulting in the removal of the dropdown list from module X.
+    which has been used by another module, X. Module X has a drop-down list of items belonging to 
+    module Y. When module Y is deleted, the reference between module X and module Y is also removed.
     <br />
     To delete this module, and all its items, press "finish". To stop the wizard (at any time) press
     the "cancel" button.
