--- a/help/modules/exportmodulewizard.html
+++ b/help/modules/exportmodulewizard.html
@@ -21,7 +21,7 @@
         <tr><td>-</td>
         <td>The related modules.</td></tr>
         <tr><td>-</td>
-        <td>Reports that you have created (xsl scripts, located in the reports folder of Data Crow).</td></tr>        
+        <td>Reports that you have created (XSLT scripts, located in the reports folder of Data Crow).</td></tr>        
         <tr><td>-</td>
         <td>Settings. All the settings you have done for the specific modules are exported and used as the default settings.</td></tr>    
         <tr><td>-</td>
