--- a/help/onlinesearch/onlinesearch.html
+++ b/help/onlinesearch/onlinesearch.html
@@ -6,7 +6,7 @@
     <h1>Online Searching</h1>
     <i>Menu path: Tools &gt; Online Search</i><br><br>
 
-	Data Crow can save you time by retrieving information about an item from an online database such as Amazon, IMDb, or freedb.
+	Data Crow can save you time by retrieving information about an item from an online database such as Amazon, IMDB.com, or Freedb.
 
     <br><br><img src="./images/onlinesearch.jpg" alt="" border="0">
 
@@ -40,14 +40,17 @@
 
     <h3>Retrieve additional information on persons & companies</h3>
     Data Crow can retrieve (in most cases) additional information on persons like actors and companies like software development organizations.
-    By default this option is disabled as this option slows down the online search. When disabled persons and companies are still created but without any additional information. Such a company or person will only have a name and nothing else. When this option is enabled Data Crow will try and retrieve images and a description. Note that at any point in time you can decide to update all persons and companies using the "Mass Update" feature (<a href="../tools/mass_update.html">more about this</a>) of Data Crow or one by one by using the online search functionality of the specific module.
+    By default this option is disabled as this option slows down the online search. When this option is disabled, persons and companies are still created but without 
+    any additional information. They will only have a name and nothing else. When this option is enabled Data Crow will try and retrieve images and a description. Note that at any point in time you can decide to update all persons and companies using the "Mass Update" feature (<a href="../tools/mass_update.html">more about this</a>) of Data Crow or one by one by using the online search functionality of the specific module.
 
 	<h2>Adding the results to Data Crow</h2>
 	When you have found the result you were looking for select the item(s) and press "Add item(s)". The items are then added to the new item tab. The items are not yet saved to the database. The new item tab is a holding place for items eligible to be added to the database. You can, if you want, modify them here before saving them to database (by pressing "save").
 
 	<br><br>
 
-	To update an existing item. Press "Update". The values in the item form will be updated with the values from the selected result. Before you update check if you want to overwrite existing values. If so, check the "overwrite existing values" (unchecked by default). This setting will be remembered.
+	To update an existing item press "Update". The values in the item form will be updated with the values from the selected result. 
+	Before you update check if you want to overwrite existing values. If so, tick the "overwrite existing values" (off by default). 
+	This setting will be remembered.
 
    </body>
 </html>
