--- a/help/reports/reporting.html
+++ b/help/reports/reporting.html
@@ -9,7 +9,7 @@
     <i>Menu path: Tools &gt; Create Report</i><br>
     <i>or: right-click on selected items in view and select Create Report</i><br><br>
 
-    The reporting tool creates PDF amd HTML files based on items in the <a href="../items/views.html">view</a>.
+    The reporting tool creates PDF and HTML files based on items in the <a href="../items/views.html">view</a>.
     
     <br><br><img src="./images/reporting.png" alt="" border="0"><br><br>
     
@@ -39,7 +39,7 @@
     Limit the length of the text(s) added to the report.
 
     <h2>Printing a Report</h2>
-    Data Crow has no functionality to print the generated reports. In order to print a PDF file find a free PDF viewers suitable for the platform you are running on. The HTML reports can be printed using your favorite internet browser
+    Data Crow has no functionality to print the generated reports. In order to print a PDF file find a free PDF viewers suitable for the platform you are running on. The HTML reports can be printed using your favourite internet browser
 
     <h2>Report examples</h2>
 
