--- a/help/security/security.html
+++ b/help/security/security.html
@@ -63,7 +63,7 @@
 	
 	<h2>Plugin permissions</h2>
 	Some plugins are only available to the users after he has been authorized access to these plugins. In the 
-	"Plugin Permissions" tab you can either grant or deny the user access by checking or uncheching the "Authorized" 
+	"Plugin Permissions" tab you can either grant or deny the user access by checking or unchecking the "Authorized" 
 	field.
 	
 	<h2>Changing the password</h2>
