--- a/help/settings/fields.html
+++ b/help/settings/fields.html
@@ -7,7 +7,7 @@
     <h1>General Field Settings</h1>
     <i>Menu path: Settings &gt; General Field Settings</i><br><br>
     
-    Using the general field settings the properties of each each of the fields can be changed. 
+    Using the general field settings the properties of each of the fields can be changed. 
 
     <h2>Renaming a field</h2>
     The label of each field can be changed. On the left the original label name is displayed. 
