--- a/help/settings/filehash.html
+++ b/help/settings/filehash.html
@@ -7,7 +7,7 @@
 	    <i>Menu path: Settings &gt; Settings &gt; File Hashing</i><br><br>
 	    
 		Data Crow creates hashes for files to be able to uniquely identify them. 
-		The Drive Manager is one of the tools that uses the file hash to find moved files.
+		The Drive Manager is one of the tools which uses the file hash to find moved files.
 	
 		<h2>File hash type</h2>
 		Select the hashing algorithm. This is really a matter of taste. Any hash will do. 
