--- a/help/settings/font.html
+++ b/help/settings/font.html
@@ -12,7 +12,7 @@
 
 	<h2>Font Rendering Method</h2>
 	This is a bit of a technical part. Important to know is that this setting determines how the fonts are shown on screen
-    (rendered). If you have a laptop choose one of the LCD flavors from the dropdown.<br><br>
+    (rendered). If you have a laptop choose one of the LCD flavours from the dropdown.<br><br>
     Try one of the settings and press "Save" to apply. You can always switch back to default in case you are unsure.
 
     <h2>Font Settings</h2>
@@ -21,11 +21,11 @@
     
     <br><br><img src="./images/fonts.png" alt="" border="0"><br><br>
     
-    You can select the font type, size and style (bold and or italic). An sample of the selected settings is shown on 
+    You can select the font type, size and style (bold and or italic). A sample of the selected settings is shown on 
     lower part. Once you are happy with your settings press "save" to apply them.
 
     <h2>Foreign Character support</h2>
-    Data Crow supports Chinese, Japanese and other non ISO-8859-1 character sets (it supports Unicoded / UTF-8 characters).
+    Data Crow supports Chinese, Japanese and other non ISO-8859-1 character sets (it supports Unicode / UTF-8 characters).
     To get this working however the Font you selected must support this as well. For Windows systems the best 
     character sets to use are the ones having "Unicode" in the name, such as "Arial Unicode MS". 
 
