--- a/help/settings/general.html
+++ b/help/settings/general.html
@@ -5,9 +5,9 @@
   <body>
   
     <h1>General settings</h1>
-    <i>Menu path: Settings &gt; Settings &gt; General</i>
+    <i>Menu path: Settings &gt; Settings &gt; General</i><br><br>
 
-    This section described the general Data Crow settings. These settings change the fundamental behavior of
+    This section described the general Data Crow settings. These settings change the fundamental behaviour of
     Data Crow. 
     
     <br><br><b>Note</b>: these settings are stored per computer; even when you have multiple computers looking at the same
@@ -15,14 +15,14 @@
     have its very own settings.
 
     <h2>Open items by default in the edit modus</h2>
-    By default Data Crow will open items in edit mode. In case you untick this option, items will be opened in 
+    By default Data Crow will open items in edit mode. In case you deselect this option, items will be opened in 
     view mode instead. You can still edit items but you'll have to select Edit specifically from the 
     <a href="../general/menubar.html">menu bar</a> or from the <a href="../items/views.html">right-click menu</a>
     in the view.
     
     <h2>Enable high quality rendering (low performance)</h2>
-    Data Crow can render graphics in higher quality. By default this option is turned off for perfomance reasons, 
-    but you can try how it works for you. It solely impacts the presentation, it does not impact how images are stored in
+    Data Crow can render graphics in higher quality. By default this option is turned off for performance reasons, 
+    but you can try how it works for you. It solely impacts the presentation; it does not impact how images are stored in
     Data Crow.
 
 	<h2>Check for value uniqueness upon saving</h2>
@@ -42,10 +42,10 @@
 
 	<h2>Delete picture file after adding it to an item</h2>
 	Deletes the picture from your disk after it has been added to the Data Crow database. 
-    Off by default which is the recommended settings.</td>
+    This option is turned off by default which is the recommended settings.</td>
 	
-    <h2>Check for new versions on startup</h2>
-    Checks whether there is a new release of Data Crow available (on startup). On by default.</td>
+    <h2>Check for new versions on start up</h2>
+    Checks whether there is a new release of Data Crow available (on start up). On by default.</td>
 
   </body>
 </html>
