--- a/help/settings/itemformsettings.html
+++ b/help/settings/itemformsettings.html
@@ -15,7 +15,7 @@
     <h2>Tabs</h2>
     
     <h3>Adding a Tab</h3>
-    Here you can define new tabs or delete and existing one. To add a new tab press the Add button. This will
+    Here you can define new tabs or delete and existing one. To create a new tab press the "Add" button. This will
     open an item form where you can define the name and an icon for the new tab. 
     <br><br>
     Press the Save button to make this tab available.
