--- a/help/settings/laf.html
+++ b/help/settings/laf.html
@@ -9,7 +9,7 @@
     A Look and Feel changes the complete visual presentation of an application, the.. look and feel so to speak. Selecting one of the look and feels applies it directly.<br>
 
 	<h2>System Default</h2>
-	This is this the Look and Feel delivered with Java designed for the platform you are running on.<br>
+	This is the Look and Feel as delivered by Java and is specifically designed for the platform you are running on.<br>
 
 	<h2>System Look and Feels</h2>
 	All the Look and Feels provided by Java, tailored for specific platforms.<br>
