--- a/help/settings/module.html
+++ b/help/settings/module.html
@@ -9,7 +9,7 @@
     <i>Menu path: Settings &gt; Settings &gt; Enabled Modules</i><br><br>
 
     In case you don't use a certain module, you can disable this module here. 
-    The items belonging to this module will not be removed. Simple uncheck the checkbox to disbale a module and 
+    The items belonging to this module will not be removed. Simple uncheck the checkbox to disable a module and 
     check it to enable a module. Press "save" and the settings are applied.
 
     <h2>Disabling the Loan functionality</h2>
