--- a/help/settings/webfields.html
+++ b/help/settings/webfields.html
@@ -11,13 +11,13 @@
     in which order.
 
 	<h2>Field</h2>
-	The name of the field for which the settings are applied.
+	The name of the field to which the settings belong / will be applied to.
 
     <h2>Width</h2>
     The display width of the field in the item overview pages.
 
     <h2>Maximum Text Length</h2>
-    The maximum text length. By default text is not cut off which might
+    By default text is not cut off which might
     cause the text to overflow in the overview pages. Setting a value here
     will shorten the length of the displayed text.
     
