--- a/help/tools/auto_numbering.html
+++ b/help/tools/auto_numbering.html
@@ -10,17 +10,18 @@
 	
 	<br><br><img src="./images/autonumberer.png" /> <br><br>
 	
-	There are several option available for the auto numbering feature. 
+	There are several options available for the auto numbering feature. 
 
     <h2>Field</h2>
     The fields you can select are the custom fields. You can rename these fields in the <a href="../settings/fields.html">General Field Settings</a>.
 
 	<h2>Enabled</h2>
-	Enables autonumbering for this field. The field will also be enabled and made visible (if it is not already so).
+	Enables auto numbering for this field. The field will also be enabled and made visible (if it is not already so).
 
 	<h2>Fill Gaps</h2>
-	Reuses a number. When you have 3 items with a number assigned to each (1,2,3) and you decide to delete the item with number 2 assigned it, you can reuse this number for a new item. <br>
-	With this option disabled, Data Crow would assign it number 4 instead of filling the gap.
+	When you have 3 items with a number assigned to each (1,2,3) and you decide to delete the item with number 2 assigned it, 
+	you can reuse this number for a new item. <br>
+	With this option disabled, Data Crow would assign the next item number 4 instead of filling the gap by using the available number 2.
 
     <h1>(Re-) number all items</h1>
     Every item can immediately be given a new and unique number.
