--- a/help/tools/fileinformationimport.html
+++ b/help/tools/fileinformationimport.html
@@ -8,7 +8,7 @@
     <i>Menu path: Tools &gt; "Item Name" File Import </i><br><br>
 
 	Using the import feature you can quickly retrieve information from
-  	the CD-Rom or hard drive. This feature is found in the &#8220;Tools&#8221; menu and
+  	the CD-ROM or hard drive. This feature is found in the &#8220;Tools&#8221; menu and
   	has the name &#8216;"Item Name" File Import&#8217; (where "Item Name" is the module name, such as Movie or Audio CD).
     <br><br>
     <b>Note:</b> This tool is not to be confused with the ability of Data Crow to import items from 
