--- a/help/tools/filerenamer.html
+++ b/help/tools/filerenamer.html
@@ -71,7 +71,7 @@
 	
 	<h3>Use alternate location</h3>
 	You can also choose to move the file to an altogether different location. This is a nice
-	option if you have for example mp3 files scattered over multiple harddrives and would like
+	option if you have for example mp3 files scattered over multiple hard drives and would like
 	to to move them all to a different location.
 
 		
@@ -84,10 +84,10 @@
 	The actual result might differ as the file to rename has to exist. If it does not exist it is
 	simply skipped.
 
-	<h3>Exculding items</h3>
+	<h3>Excluding items</h3>
 	The preview window also allows you to exclude items. 
 	Select the items you want to remove by clicking on them in the table, right-click and select
-	'remove' from the popup menu. The removed items will by excluded by the file renamer task. 
+	'remove' from the popup menu. The removed items will be excluded by the file renamer task. 
 	
 	<h3>Verify and continue</h3>
 	Press 'start' to continue the renaming process if the preview is to your liking. 
