--- a/help/tools/item_export.html
+++ b/help/tools/item_export.html
@@ -13,7 +13,7 @@
 
   <h2>Formats</h2>
   The wizard is capable to export items to a text or a XML file. XML is the preferred format as the items will be stored in
-  a hierarchical structure rather then a flat, single line, structure. The XML format is also the preferred format when exchanging items
+  a hierarchical structure rather than a flat, single line, structure. The XML format is also the preferred format when exchanging items
   between Data Crow installations. The XML format is also used internally by Data Crow for operations like the module export and import.
   <br><br>
   The text export exports the items to a text file. Each line represents a single item. The values are separated by a character
