--- a/help/tools/item_import.html
+++ b/help/tools/item_import.html
@@ -13,7 +13,7 @@
 
   <h2>Formats</h2>
   Select the type of import you would like to perform. For XML files select the XML Import. For text files select the CSV import. A valid CSV contains one item per
-  line. The values of each of the items is separated by a specific character.
+  line. The values of each of the items are separated by a specific character.
 
   <h2>Configuration</h2>
   Depending on the format you have chosen some of the configuration options might not be available.
@@ -41,7 +41,7 @@
 
   <h2>Limitations</h2>
   
-  The CSV import will always skip the first line as it expect the field names to be located on this position.
+  The CSV import will always skip the first line as it expects the field names to be located on this position.
 
   </body>
 </html>
