--- a/help/tools/resource_editor.html
+++ b/help/tools/resource_editor.html
@@ -20,7 +20,7 @@
     you have made.
     
     <h2>Create a new language</h2>
-    Select the 'create a new language' option from the edit menu. Enter the name of the to be added language and
+    Select the 'create a new language' option from the edit menu. Enter the name of the new language pack and
     select the language on which this new language should be based. Basing a language on an existing language means
     that its values will be used in the new language until they have been edited.<br>
     Make sure to save your changes before closing the dialog.
