--- a/help/tools/title_rewriter.html
+++ b/help/tools/title_rewriter.html
@@ -17,8 +17,8 @@
  	Check the field enabled to rewrite titles for new items (and when updating existing titles). Disable this functionality by unchecking the enabled box (default).
 
     <h2>Words</h2>
-	Define the words here. A title starting with one of the entered words (seperated by a space !) will be rewritting: 'a house', 'house, a'. <br>
-	You can define multiple words. Seperate each word with ','.
+	Define the words here. A title starting with one of the entered words (separated by a space) will be rewritten: 'a house', 'house, a'. <br>
+	You can define multiple words. Separate each word with a comma (,).
 
 	<br><br>
 
