--- a/help/webserver/webserver.html
+++ b/help/webserver/webserver.html
@@ -22,8 +22,8 @@
     <h2>Web Server status</h2>
     <p>
    	Here the current status of the web server is shown. The web server can be started
-   	by using the blue &quot;play&quot; button. The stop button stops the web server which
-   	make the web application unreachable for the outside world.
+   	by using the blue &quot;play&quot; button. The stop button stops the web server, making the web application 
+   	unreachable for the outside world.
     </p>
     
     <h2>Navigating to the web interface</h2>
