--- a/help/general/default_modules.html
+++ b/help/general/default_modules.html
@@ -8,9 +8,9 @@
     Data Crow comes with a default set of modules (depending on how you installed Data Crow).
     Here you find a short description on the purpose of each of these modules. Most of these modules have powerful <a href="../onlinesearch/onlinesearch.html">Online Services</a> available
     to find information on your items as well <a href="../tools/fileinformationimport.html">File Importers</a> to retrieve information from the files stored on your
-    system / external sources. Each of these modules have specific <a href="../reports/reporting.html">reports</a> available. 
+    system / external sources. Each of these modules has specific <a href="../reports/reporting.html">reports</a> available. 
     Most modules allow you to track if an item has been <a href="../loan/loan.html">borrowed</a> by a contact person. In short each of the default modules
-    have an extended set of tools available to make your life easier.</p>
+    has an extended set of tools available to make your life easier.</p>
     
     <br>
     
@@ -28,19 +28,19 @@
             </td></tr>
     	<tr><td><img src="./images/module_image.png"></td>
     		<td><b>Image Module.</b> 
-            With the images module you can register your image file collection (JPEG, BMP, GIF, etc). The Image module does not provide any online services but 
+            With the images module you can register your image file collection (JPEG, BMP, GIF, etc.). The Image module does not provide any online services but 
             can extract detailed information from your image files using the file importer.
             </td></tr>
     	<tr><td><img src="./images/module_container.png"></td>
     		<td><b>Container Module.</b> 
             A container is the physical location of an item. A container can represent a CD-case, closet, building or anything else that identifies the location
-            of an item. It is possible to create a hierarchie of containers, such as: Building - Floor - Closet - Shelf - Spot on shelf. 
+            of an item. It is possible to create a hierarchy of containers, such as: Building - Floor - Closet - Shelf - Spot on shelf. 
             If supported by the module, an item can be assigned to multiple containers. The container module has no file importers or online services available.   
             </td></tr>
     	<tr><td><img src="./images/module_book.png"></td>
     		<td><b>Books Module.</b> 
             The book module can be used to register your books and your eBooks (PDF). The Amazon, Bol.com and other online services make it easy to find information
-            on your books. The file importer can import information on eBooks. Book publishers and authors are maintained in seperate modules making it possible to 
+            on your books. The file importer can import information on eBooks. Book publishers and authors are maintained in separate modules making it possible to 
             store detailed information on each of these persons / companies.
             </td></tr>
     	<tr><td><img src="./images/module_audiocd.png"></td>
