--- a/help/general/menubar.html
+++ b/help/general/menubar.html
@@ -33,7 +33,7 @@
         <td><a href="../items/itemform.html">Open &lt;name&gt; Item</a>. 
         The Open &lt;name&gt; Item menu option (the &lt;name&gt; will mention the item name, such as Movie in the Movie module) 
         opens the currently selected item (in the overview) in the <a href="../items/itemform.html">item form</a>. 
-        The item information cannot be changed using the option, it will open the item readonly.
+        The item information cannot be changed using this option, it will open the item read-only.
         </td></tr>
     </table>     
     
@@ -93,7 +93,7 @@
         </td></tr>
         <tr><td><img src="./images/tb_loan.png" alt="" border="0"></td>
         <td><a href="../loan/loanadmin.html">Loan Administration</a>. 
-        This overview gives you a complete picture of yoru current loans, historical loans and overdue items. 
+        This overview gives you a complete picture of your current loans, historical loans and overdue items. 
         It has some powerful search options for you to work with.
         </td></tr>        
     </table>
@@ -102,7 +102,7 @@
     <table>
         <tr><td><img src="./images/tb_beginner.png" alt="" border="0"></td>
         <td><a href="#">Beginner</a>. 
-        This switches Data Crow to the "Beginner" mode, hiding many of the options within the various menu's.
+        This switches Data Crow to the "Beginner" mode, hiding many of the options within the various menus.
         </td></tr>
         <tr><td><img src="./images/tb_expert.png" alt="" border="0"></td>
         <td><a href="#">Expert</a>. 
@@ -117,7 +117,7 @@
         <td><a href="../modules/createmodulewizard.html">Create Module Wizard</a>. 
         This tool allows you to create a new module. It is a powerful tool allowing you to design your own 
         collection management section within the application. Items stored in these modules are stored in the database, just 
-        as is done with the dfeault modules. You'll have many of the standard tools at your disposal when administrating your items.
+        as is done with the default modules. You'll have many of the standard tools at your disposal when managing your items.
         There is a separate manual available for download from the website.
         </td></tr>
         <tr><td><img src="./images/tb_wizard.png" alt="" border="0"></td>
@@ -128,29 +128,29 @@
         <tr><td><img src="./images/tb_wizard.png" alt="" border="0"></td>
         <td><a href="../modules/altermodulewizard.html">Alter Module Wizard</a>.  
         In case you want to add a field to one of the modules you can use the alter module wizard. This powerful tool allows you to change
-        existing fields or add new fields. Additionally you can modify some of the settings (indicate if tems be lend to other for example).
+        existing fields or add new fields. Additionally you can modify some of the settings (indicate if items of this module can be lend to others for example).
         </td></tr>   
         <tr><td><img src="./images/tb_wizard.png" alt="" border="0"></td>
         <td><a href="../modules/relatemodulewizard.html">Relate Module Wizard</a>.  
-        A wizard driven tool allow to create a parent-child relationshio between two modules. An example of such a relationship can be found in 
+        A wizard driven tool which allows you to create a parent-child relationship between two modules. An example of such a relationship can be found in 
         the Audio CDs module. This module is the parent of the Audio Tracks module. This means that Audio tracks cannot exist without an Audio CD.
-        There is no unrelate option available; be careful using this tool!
+        There is no way to remove this relationship; be careful using this tool!
         </td></tr>   
         <tr><td><img src="./images/tb_wizard.png" alt="" border="0"></td>
         <td><a href="../modules/deletemodulewizard.html">Delete Custom Module Wizard</a>.  
-        wanting to delete a module? This is the wizard to be used. In two simple steps the module will be destroyed. This cannot be undone.
+        Wanting to delete a module? This is the wizard to be used. In two simple steps the module will be destroyed. This cannot be undone.
         Note that you can also disable modules from within the <a href="../settings/module.html">settings</a>. 
         This hides the module without removing it. This option is not available in case you have not created or imported a custom module.
         </td></tr>
         <tr><td><img src="./images/tb_wizard.png" alt="" border="0"></td>
         <td><a href="../modules/exportmodulewizard.html">Export Module Wizard</a>.  
         So you have created this really awesome module! So much work while it is only in use in your local installation. Why not share it 
-        with other persons? use the export module wizard to export the created module structure along with its settings, data and pictures. 
+        with other persons? Use the export module wizard to export the created module structure along with its settings, data and pictures. 
         This option is not available in case you have not created or imported a custom module.
         </td></tr>           
         <tr><td><img src="./images/tb_wizard.png" alt="" border="0"></td>
         <td><a href="../modules/importmodulewizard.html">Import Module Wizard</a>.  
-        This tool allows you to import a module previosuly export with the export module wizard. It's a simple process which will load the module,
+        This tool allows you to import a module previously export with the export module wizard. It's a simple process which will load the module,
         its items, settings and pictures.
         </td></tr>
         <tr><td>-</td>
@@ -165,12 +165,12 @@
     <table>
         <tr><td><img src="./images/tb_viewtable.gif" alt="" border="0"></td>
         <td><a href="../items/views.html">Card View</a>. 
-        The card view is graphically the nicest looking view. Items are displayed as small cards and show a picture and a short decription of the item
+        The card view is graphically the nicest looking view. Items are displayed as small cards and show a picture and a short description of the item
         based on the <a href="../settings/fields.html">field settings</a>, "is descriptive".
         </td></tr>    
         <tr><td><img src="./images/tb_viewcard.gif" alt="" border="0"></td>
         <td><a href="../items/views.html">Table View</a>. 
-        The table view allows you to edit items directly in the view, withou having to open the item form.
+        The table view allows you to edit items directly in the view, without having to open the item form.
         </td></tr>
         <tr><td><img src="./images/tb_toggle.png" alt="" border="0"></td>
         <td><a href="../filters/filters.html">Toggle Quick Filter bar</a>. 
@@ -265,7 +265,8 @@
         <tr><td><img src="./images/tb_fileimport.png" alt="" border="0"></td>
         <td><a href="../tools/fileinformationimport.html">File Import</a>. 
         Extracts information from the files on your system. For music albums for example Data Crow can get the name of the artist and album from the
-        MP3 or other file formats. Additionally it can find missing information using one of the <a href="../onlinesearch/onlinesearch.html">online services</a>. This tool is only availble for "file backed" modules / items. This should not be confused with the ability of Data Crow to import items from 
+        MP3 or other file formats. Additionally it can find missing information using one of the <a href="../onlinesearch/onlinesearch.html">online services</a>. 
+        This tool is only available for "file backed" modules / items. This should not be confused with the ability of Data Crow to import items from 
         text files. Use the <a href="../tools/item_import.html">Item Importer</a> to import items from a CSV, text or XML file.
         </td></tr> 
         <tr><td><img src="./images/tb_onlinesearch.png" alt="" border="0"></td>
@@ -280,7 +281,7 @@
         </td></tr>
         <tr><td><img src="./images/tb_report.png" alt="" border="0"></td>
         <td><a href="../reports/reporting.html">Create Report</a>. 
-        Create HTML and PDF reports. If this menu option is not available it means that no XSLT files (report templates) have been defined for yoru module. 
+        Create HTML and PDF reports. If this menu option is not available it means that no XSLT files (report templates) have been defined for your module. 
         There is a manual on how to do this, which can be found on the Data Crow website.
         </td></tr>
         <tr><td><img src="./images/tb_itemexport.png" alt="" border="0"></td>
@@ -314,7 +315,8 @@
         </td></tr> 
         <tr><td><img src="./images/tb_settings.png" alt="" border="0"></td>
         <td><a href="../tools/database_editor.html">Database Editor</a>. 
-        Direct access to the database. It ignores all the safety rules I have build into the application. Use at your own risk! (make.. backups..)
+        Direct access to the database. It ignores all the safety rules I have built into the application. Use at your own risk! 
+        (make.. backups..)
         </td></tr>
         <tr><td><img src="./images/tb_drivemanager.png" alt="" border="0"></td>
         <td><a href="../tools/drivemanager.html">Drive Manager</a>. 
