*** empty log message ***

--- a/help/items/administration.html
+++ b/help/items/administration.html
@@ -35,6 +35,9 @@
     To view how the item has been used open the item and take a look at the related item tab of the 
     <a href="../items/itemform.html">item form</a>.
 
+    <h2>Settings</h2>
+    The Settings menu contains the <a href="../settings/fields.html">General Field Settings</a> and the 
+    <a href="../settings/itemformsettings.html">Item Form Settings</a> options.
 
   </body>
 </html>
