*** empty log message ***

--- a/help/items/administration.html
+++ b/help/items/administration.html
@@ -11,6 +11,10 @@
     
     <br><br><img src="./images/administration.png" alt="" border="0"><br><br>
 
+    <h2>Filter</h2>
+    You can filter by typing in the text field located at the top of the screen. The items are filtered while you are typing.
+    It looks for items where the name starts with the entered value. Removing the entered text will cause all items to be shown.
+
     <h2>Create Multiple</h2>
     If you want to create multiple items at once, press the "Create Multiple" button.
 
