--- a/help/items/itemform.html
+++ b/help/items/itemform.html
@@ -118,6 +118,11 @@
     On the left hand side the available items (countries in above example) are shown. These items are not assigned to the item
     but are available to be assigned to the item if you so wish. On the right hand side the selected items are shown. These items
     are actually assigned to the item. <br><br>
+
+    You can filter by typing in the text field located at the top of the screen. The available items list is filtered while you 
+    are typing. It looks for items where the name starts with the entered value. Removing the entered text case all items to be shown.
+    
+    <br><br>
     Double-click on the item to assign it. To remove an assigned item double click on the corresponding
     assigned item.<br><br>
     Press "Save" to store the changes.
