*** empty log message ***

--- a/help/modules/copymodulewizard.html
+++ b/help/modules/copymodulewizard.html
@@ -6,6 +6,7 @@
   <body>
 
     <h1>Copy Module Wizard</h1>
+    <i>Menu path: Modules &gt; Copy Module Wizard</i><br><br>
 
     The "Copy Module Wizard" can be found in the "modules" menu of the main screen.
     <br><br>
