*** empty log message ***

--- a/help/tools/files.html
+++ b/help/tools/files.html
@@ -4,6 +4,9 @@
   </head>
   <body>
     <h1>File Operations</h1>
+    <i>Menu path: View &gt; Right-click on item</i><br>
+    <i>Menu path: Item Form &gt; Right-click on file field</i><br><br>
+    
     By default Data Crow does not interfere with the files on your system. For example: when you delete a book item which has a PDF file linked to it 
     Data Crow will not delete the file itself, only the book item. You can however make use of the "files" menu from the view popup menu or from the 
     options offered by the file fields.
